--- a/app/design/frontend/Project/Default/Magento_Catalog/web/css/source/_extend.less
+++ b/app/design/frontend/Project/Default/Magento_Catalog/web/css/source/_extend.less
@@ -2,3 +2,7 @@
 @import './extend/_product-information.less';
 @import './extend/_product-media.less';
 @import './extend/_product-tabs.less';
+@import './extend/_product-related.less';
+@import './extend/_product-upsell.less';
+@import './extend/_product-label.less';
+@import './extend/_product-gallery.less';
