--- a/app/design/frontend/Project/Default/Magento_Catalog/web/css/source/extend/_catalog-product-view.less
+++ b/app/design/frontend/Project/Default/Magento_Catalog/web/css/source/extend/_catalog-product-view.less
@@ -6,6 +6,9 @@
     .catalog-product-view {
         .column.main {
             display: grid;
+            > * {
+                max-width: ~"calc(100% - 15px)";
+            }
         }
     }
 }
@@ -15,7 +18,25 @@
 //  _____________________________________________
 
 .media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__m) {
+    .catalog-product-view {
+        .column.main {
+            grid-template-columns: 1fr;
+            > * {
+                grid-column: 1 / 1;
+            }
+        }
+        .product.media {
+            order: 1;
+        }
+    }
 
+    .product-info-main {
+        order: 2;
+    }
+
+    .product.info.detailed {
+        order: 3;
+    }
 }
 
 //
@@ -25,7 +46,6 @@
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
     .catalog-product-view {
         .column.main {
-            display: grid;
             grid-template-columns: 1fr 1fr;
             grid-column-gap: 50px;
         }
@@ -34,29 +54,8 @@
         .product.media {
             width: 100%;
         }
-
-        .swatch-opt {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            grid-column-gap: 35px;
-        }
-
-        .swatch-option {
-            float: right;
-            margin: 0 5px;
-        }
-
-        .swatch-attribute-options {
-            margin-top: 0;
-        }
-
-        .swatch-attribute:first-of-type {
-            grid-column: 1 / span 2;
-            display: flex;
-            align-items: center;
-        }
     }
-    .product-info-media {
+    .product.media {
         order: 1;
     }
 
@@ -68,13 +67,5 @@
         grid-column: 1 / span 2;
         grid-row: 2;
     }
-
-    .product-info-main .box-tocart .actions,
-    .product-options-bottom .box-tocart .actions {
-        display: block;
-    }
-
-    .catalog-product-view .box-tocart .action.tocart {
-        width: 100%;
-    }
 }
+
