--- a/app/design/frontend/Project/Default/web/css/source/_variables.less
+++ b/app/design/frontend/Project/Default/web/css/source/_variables.less
@@ -35,6 +35,7 @@
 //  ---------------------------------------------
 
 @screen__l_1100: 1100px;
+@screen__l_1200: 1200px;
 
 //
 //  Main Colors
@@ -55,7 +56,6 @@
 //  ---------------------------------------------
 
 @pg-successful-color: #55b047;
-@pg-label-new-bg: #3cb878;
 @pg-facebook-bg: #5b77b4;
 @pg-facebook-bg-hover: #7c92c3;
 @pg-radio-btn-bg: #fc4a9e;
@@ -63,6 +63,9 @@
 @pg-border-dark-bg: #636262;
 @pg-close-btn-color: #9c9c9c;
 @pg-search-border-color: #ececec;
+@pg-old-price-color: #515151;
+@pg-new-product-label: #0072bc;
+@pg-new-collection-label: #3cb878;
 
 //
 //  Fonts
