--- a/app/design/frontend/Project/Default/web/css/source/_global.less
+++ b/app/design/frontend/Project/Default/web/css/source/_global.less
@@ -4,6 +4,7 @@
 
 & when (@media-common = true) {
   body {
+    overflow-x: hidden;
     font: 1.6rem/1.2 'Spacer', sans-serif;
     direction: rtl;
   }
