--- a/app/design/frontend/Project/Default/web/css/source/lib/_responsive.less
+++ b/app/design/frontend/Project/Default/web/css/source/lib/_responsive.less
@@ -74,6 +74,11 @@
         .media-width('min', @screen__xl);
     }
 
+    @media all and (min-width: @screen__l_1200),
+    print {
+        .media-width('min', @screen__l_1200);
+    }
+
     @media all and (min-width: @screen__l_1100),
     print {
         .media-width('min', @screen__l_1100);
