--- a/app/design/frontend/Project/Default/Magento_Catalog/templates/size-chart.phtml
+++ b/app/design/frontend/Project/Default/Magento_Catalog/templates/size-chart.phtml
@@ -4,6 +4,6 @@
  */
 ?>
 
-<div class="size-chart">
+<a href="#" class="size-chart">
     <?php echo $block->escapeHtml(__('Size chart')) ?>
-</div>
+</a>
