--- a/app/design/frontend/Project/Default/web/css/source/_global.less
+++ b/app/design/frontend/Project/Default/web/css/source/_global.less
@@ -6,6 +6,20 @@
   body {
     overflow-x: hidden;
     font: 1.6rem/1.2 'Spacer', sans-serif;
+    > * {
+      direction: rtl;
+    }
+  }
+
+  .page-main {
+    height: auto !important;
+  }
+
+  .owl-carousel {
+    direction: ltr;
+  }
+
+  .owl-item {
     direction: rtl;
   }
 
@@ -159,22 +173,22 @@
   .h1 {
     font: 3.8rem/1.2 @pg-base-font-name;
   }
+
   h2,
   .h2 {
     font: 3.8rem/1.2 @pg-base-font-name;
   }
+
   h3,
   .h3 {
     font: 3.2rem/1.2 @pg-base-font-name;
   }
+
   h4,
   .h4 {
     font: 2rem/1.2 @pg-base-font-name;
   }
-  h5,
-  .h5 {
 
-  }
   h6,
   .h6 {
     font: 1.6rem/1.2 @pg-base-font-name;
@@ -201,22 +215,22 @@
   .h1 {
     font: 3.8rem/1.2 @pg-base-font-name;
   }
+
   h2,
   .h2 {
     font: 3.8rem/1.2 @pg-base-font-name;
   }
+
   h3,
   .h3 {
     font: 3.2rem/1.2 @pg-base-font-name;
   }
+
   h4,
   .h4 {
     font: 2.5rem/1.2 @pg-base-font-name;
   }
-  h5,
-  .h5 {
 
-  }
   h6,
   .h6 {
     font: 2rem/1.2 @pg-base-font-name;
