--- a/app/design/frontend/Project/Default/web/css/source/extend/footer/_footer-cards.less
+++ b/app/design/frontend/Project/Default/web/css/source/extend/footer/_footer-cards.less
@@ -37,6 +37,10 @@
             margin: 15px auto 20px auto;
         }
     }
+
+    .btn-accent-to-dark:visited {
+        color: @pg-white-color;
+    }
 }
 
 //
