--- a/app/design/frontend/Project/Default/Magento_Catalog/web/css/source/_extend.less
+++ b/app/design/frontend/Project/Default/Magento_Catalog/web/css/source/_extend.less
@@ -5,3 +5,4 @@
 @import './extend/_product-label.less';
 @import './extend/_size-chart.less';
 @import './extend/_product-social.less';
+@import './extend/_product-enabled.less';
