--- a/app/design/frontend/Project/Default/Magento_Catalog/web/css/source/extend/_product-information.less
+++ b/app/design/frontend/Project/Default/Magento_Catalog/web/css/source/extend/_product-information.less
@@ -118,6 +118,7 @@
     }
 
     .product-info-main {
+        position: relative;
         ul {
             margin: 0;
             padding: 0;
@@ -182,6 +183,18 @@
 
     .data.item.content {
         text-align: justify;
+    }
+
+    .product-sale {
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 5px;
+        font-family: @pg-additional-font-name;
+        font-weight: bold;
+        line-height: 1;
+        background-color: @pg-accent-color;
+        color: @pg-white-color;
     }
 }
 
