--- a/app/design/frontend/Project/Default/Magento_Catalog/web/css/source/extend/_product-enabled.less
+++ b/app/design/frontend/Project/Default/Magento_Catalog/web/css/source/extend/_product-enabled.less
@@ -26,5 +26,17 @@
                 background-color: rgba(255, 255, 255, .5);
             }
         }
+        .product-sale {
+            &:before {
+                content: '';
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                z-index: 10;
+                background-color: rgba(255, 255, 255, .5);
+            }
+        }
     }
 }
